--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main">
         <div class="tDisplay">
-            <span id="display">12:02:03</span>
+            <span id="display"></span>
         </div>
         <div id="h">  </div>
         <div id="m"></div>
